Further correct info responsive spacing issues.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,13 +97,14 @@ header {
   align-items: center;
   background-color: gray;
   border-bottom: 1px solid black;
-  padding: 32px 24px;
+  box-sizing: border-box;
 }
 
 .info.main {
   display: flex;
   flex-direction: column;
   background-color: lightgray;
+  box-sizing: border-box;
 }
 
 .info.box {
@@ -111,27 +112,29 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 16px 16px;
+
 }
 
 .box.img {
-  height: 50%;
-  overflow: hidden;
-}
-
-.box.img img {
-  width: 100%;
-  height: inherit;
+  flex-grow: 1;
 }
 
 .box.content {
   background-color: lightgreen;
   width: 100%;
   height: 50%;
+  flex-grow: 2;
 }
 
 @media only screen and (min-width: 650px) {
+  #info {
+    padding: 32px 24px;
+  }
+
   .info.box {
     flex-direction: row;
+    align-items: stretch;
   }
 
   .info.main {
